He cambiado cosas varias

--- a/index.html
+++ b/index.html
@@ -14,18 +14,37 @@
 -->
 
 <div class="grid-container">
-  <div class="box" id="header">HEADER HEADER</div>
-  <div class="box" id="right">
-    <p> tuvi </p>
+  <div class="box" id="header">
+    <ul id="menu">
+      <li> <a href="#">Memes</a> </li>
+      <li> <a href="#">Messi</a> </li>
+      <li> <a href="#">Puig</a> </li>
+    </ul>
+
   </div>
-  <div class="box" id="content">CONTENT
+  <div class="box" id="right">
+    <div id="card">
+      <img src="img/sticker_9.png"/>
+      <p> tuvi </p>
+      <p>
+        <a href="#">twitter</a>
+        <a href="#">facebook</a>
+      </p>
+    </div>
+
+  </div>
+  <div class="box" id="content">
   <h1> Messirve ª </h1>
   <title> Kety </title>
+  <p> ª </p>
     <div id="messi-wrapper">
-  <img  id="messi" src="img/messirve.jpg" alt="Messirve" />
+      <img  id="messi" src="img/messirve.jpg" alt="Messirve" />
     </div>
   </div>
-  <div class="box" id="footer">FOOTER</div>
+  <div class="box" id="footer">
+    <p>Institut Puig Castellar </p>
+  </div>
 </div>
+
 </body>
 </html>
