He cambiado cosas varias

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="box" id="right">
     <div id="card">
       <img src="img/sticker_9.png"/>
-      <p> tuvi </p>
+      <p> Hola me llamo Pepo </p>
       <p>
         <a href="#">twitter</a>
         <a href="#">facebook</a>
